infra/app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-backend
  namespace: markeble
  labels:
    app: ruby-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby-backend
  template:
    metadata:
      labels:
        app: ruby-backend
    spec:
      imagePullSecrets:
        - name: regcred
    spec:
      containers:
        - name: ruby-backend
          image: kusumaningrat16/ruby-backend-markeble:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          command: ["./bin/rails"]
          args: ["server", "-b", "0.0.0.0"]

---
apiVersion: v1
kind: Service
metadata:
  name: ruby-backend-service
  namespace: markeble
spec:
  selector:
    app: ruby-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
