infra/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruby-backend-ingress
  namespace: markeble
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ruby.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ruby-backend-service
                port:
                  number: 3000
